fixed text spacing

--- a/fishingsite/styles/site-plan.css
+++ b/fishingsite/styles/site-plan.css
@@ -11,7 +11,7 @@ Fonts are separated by a | */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Sedan SC, sans-serif ;
+  --heading-font: Sedan+SC, sans-serif ;
   --paragraph-font: Karla, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
